# TPL-builder

./: .cmake-format  ADD_TPL.cmake  CMakeLists.txt  Makefile  README.md  README.txt  SoftwareLicense.tex  ctest_script.cmake  macros.cmake  parseTime.cpp  print_elapsed.cmake  sample_script  write_stamp.cmake
TPLs/: AMP.cmake  BOOST.cmake  CABANA.cmake  CATCH2.cmake  CHACO.cmake  CPPCHECK.cmake  DTK.cmake  DefaultLapackInterface.h  EXODUSII.cmake  FFTW.cmake  GKLIB.cmake  HDF5.cmake  HPL.cmake  HYPRE.cmake  KOKKOS-nvcc.cmake  KOKKOS.cmake  KOKKOSKERNELS.cmake  LAPACK.cmake  LAPACK_WRAPPERS.cmake  LAPACK_macros.cmake  LIBMESH.cmake  LMDB.cmake  MATLAB.cmake  METIS.cmake  MOAB.cmake  MUMPS.cmake  NEMESIS.cmake  NETCDF.cmake  NRDF.cmake  NVCC.cmake  OGRE.cmake  OPENBLAS.cmake  P3DFFT.cmake  PARMETIS.cmake  PETACA.cmake  PETSC.cmake  PIXIE3D.cmake  QT.cmake  QWT.cmake  RAJA.cmake  (+17 more)
TPLs/LapackWrappers/: .clang-format  CMakeLists.txt  LapackWrappers.complex.cpp  LapackWrappers.cpp  LapackWrappers.default.cpp  LapackWrappers.double.cpp  LapackWrappers.double.hpp  LapackWrappers.float.cpp  LapackWrappers.float.hpp  LapackWrappers.h  LapackWrappers.hpp  LapackWrappersInfo.cpp  LapackWrappersMachineParams.cpp
TPLs/MATLAB/: CMakeLists.txt  hello_world.cpp  hello_world_unittest.m
TPLs/StackTrace/: CMakeLists.txt  ErrorHandlers.h  StackTrace.cpp  StackTrace.h  TestStack.cpp  Utilities.cpp  source_location.h
TPLs/StackTrace/cmake/: macros.cmake
TPLs/StackTrace/std17/: string_view.h
cmake/: FindBlasLapack.cmake  FindCoverage.cmake  FindCppcheck.cmake  FindCppclean.cmake  FindCudaGPUs.cu  FindHIPGPUs.hip  FindHypre.cmake  FindLibmesh.cmake  FindPetsc.cmake  FindSAMRAI.cmake  FindSundials.cmake  FindTPLs.footer.cmake  FindTPLs.header.cmake  FindTPLs.template.cmake  FindTimer.cmake  FindXbraid.cmake  Find_BLAS_LAPACK.cmake  LAPACK_macros.cmake  WriteRepoVersion.cmake  check_build.cmake  echo_last_build.cmake  helloWorld.cpp  macros.cmake  print_elapsed.cmake  run.cppclean.template.cmake  write_stamp.cmake
cmake/BlasLapack/: define.h  fortran_calls.h
cmake/dummyTimer/: TimerConfig.cmake  TimerVersion.cmake
patches/: hypre-2.31.0.patch  hypre.hipidentity.patch  hypre.patch  hypre.ptrtype.patch  kokkos.rand.patch  libmesh.paramproxy.patch  petsc.snes.patch  samrai.patch  umpire.cuda.patch
scripts/: all-debug  eos_samr_tpl_build  hip_mpi.sh  hypre_hip_mpi.sh  sample_samr  windows.bat
spack-repo/: hyper  petsc  repo.yaml
spack-repo/v2/spack_repo/tpl_builder/: repo.yaml
tests/: .clang-format  CMakeLists.txt  TPL_helpers.h  hello_world.cpp  test_LapackWrappers.cpp  test_MPI.cpp  test_all_libraries.cpp
tests/matlab/: CMakeLists.txt  mex_hello_world.cpp
